# DVDSCAN

./: .replit  app.py  ocr_processor.py  price_lookup.py  pyproject.toml  replit.nix  replit_zip_error_log.txt  requirements.txt
.cache/nix/: binary-cache-v6.sqlite
.cache/replit/env/: latest  latest.json
.cache/replit/nix/: env.json
.local/state/replit/agent/: .latest.json:Zone.Identifier
.upm/: store.json
myenv/: pyvenv.cfg
myvenv/: pyvenv.cfg
static/css/: style.css
static/js/: main.js
templates/: index.html
